--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,12 @@
 [build-system]
-requires = ["hatchling","pandas","numpy","scipy","matplotlib","lmfit","pyyaml"]
-build-backend = "hatchling.build"
-
-[project]
-name = "deadenylationkinetics"
-version = "0.0.1"
-authors = [
-  { name="Robert Harkness", email="r.harkness@utoronto.ca" },
-  { name="Rosie Irwin", email="rosie.irwin@sickkids.ca" },
+requires = [
+	"setuptools>=54",
+	"wheel",
+	"pyyaml",
+	"numpy",
+	"scipy",
+	"lmfit",
+	"matplotlib",
+	"pandas"
 ]
-description = "A python package for exploring the enzymatic mechanisms of poly(A) RNA deadenylases"
-readme = "README.md"
-requires-python = ">=3.7"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
-
-[project.urls]
-"Homepage" = "https://github.com/robharkness/deadenylationkinetics"
-"Bug Tracker" = "https://github.com/robharkness/deadenylationkinetics/issues"
+build-backend = "setuptools.build_meta"
