--- a/setup.cfg
+++ b/setup.cfg
@@ -1,19 +1,18 @@
-[project]
-name = "deadenylationkinetics"
-version = "0.0.1"
-authors = [
-  { name="Robert Harkness", email="r.harkness@utoronto.ca" },
-  { name="Rosie Irwin", email="rosie.irwin@sickkids.ca" },
-]
-description = "A python package for exploring the enzymatic mechanisms of poly(A) RNA deadenylases"
-readme = "README.md"
-requires-python = ">=3.7"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
+[metadata]
+name = deadenylationkinetics
+version = 0.0.1
+author = Robert Harkness, Rosie Irwin
+author_email = r.harkness@utoronto.ca
+description = A python package for exploring the enzymatic mechanisms of poly(A) RNA deadenylases
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/robharkness/deadenylationkinetics
+classifiers =
+    Programming Language :: Python :: 3
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
 
-[project.urls]
-"Homepage" = "https://github.com/robharkness/deadenylationkinetics"
-"Bug Tracker" = "https://github.com/robharkness/deadenylationkinetics/issues"
+[options]
+packages = find:
+python_requires = >=3.7
+include_package_data = True
