--- a/src/data/230921_CNOT7_CNO7X_CAPRIN1/CNOT7/fit_parameters_CNOT7.yaml
+++ b/src/data/230921_CNOT7_CNO7X_CAPRIN1/CNOT7/fit_parameters_CNOT7.yaml
@@ -1,10 +1,10 @@
-Sample name: CNOT7-CAPRIN1
-Data file to fit: CNOT7_CAPRIN1_data_for_fit.csv
-Output plot file: CNOT7_CAPRIN1_FRET_kinetics_fits.pdf
-Optimal fit parameter file: CNOT7_CAPRIN1_optimal_fit_params.csv
+Sample name: CNOT7
+Data file to fit: CNOT7_data_for_fit.csv
+Output plot file: CNOT7_FRET_kinetics_fits.pdf
+Optimal fit parameter file: CNOT7_optimal_fit_params.csv
 Experimental parameters:
   Enzyme: # Enzyme concentration
-    Value: [0, 0.000002, 0.000003, 0.000005, 0.000007, 0.00001]
+    Value: [0, 0.0000005, 0.000001, 0.000002, 0.000003, 0.000005, 0.000007, 0.00001]
   RNA: # polyA RNA substrate concentration
     Value: [0.0000001]
   QT: # DNA quencher strand concentration
@@ -22,29 +22,29 @@ Modeling parameters:
   Kinetic model: Distributive
   Fit parameters:
     k1:
-      Value: 10000000.
+      Value: 50.1057431
       Units: s^-1
-      Vary: True
+      Vary: False
       Minimum: 0
     km1:
-      Value: 0.00000001
+      Value: 557.749040
       Units: s^-1
-      Vary: True
+      Vary: False
       Minimum: 0
     k2:
-      Value: 8884.81
+      Value: 13049895.6
       Units: M^-1s^-1
-      Vary: True
+      Vary: False
       Minimum: 0
     km2:
-      Value: 0.040976
+      Value: 29.2902145
       Units: s^-1
-      Vary: True
+      Vary: False
       Minimum: 0
     kcat:
-      Value: 0.385032
+      Value: 0.08497154
       Units: s^-1
-      Vary: True
+      Vary: False
       Minimum: 0
     dGo:
       Value: -2.9272 # kJ/mol Empirical value calculated from Sugimoto NAR paper
@@ -67,5 +67,5 @@ Modeling parameters:
 Plot parameters:
   Plot best fit: True
   Plot residuals: True
-  Plot 2D population bars: False
+  Plot 2D population bars: True
   Plot 3D population bars: False
