--- a/src/data/230921_CNOT7_CNO7X_CAPRIN1/CNOT7X/fit_parameters_CNOT7X.yaml
+++ b/src/data/230921_CNOT7_CNO7X_CAPRIN1/CNOT7X/fit_parameters_CNOT7X.yaml
@@ -1,7 +1,7 @@
 Sample name: CNOT7X
-Data file to fit: CNOT7X_data_for_fit.csv
-Output plot file: CNOT7X_FRET_kinetics_fits.pdf
-Optimal fit parameter file: CNOT7X_optimal_fit_params.csv
+Data file to fit: CNOT7X_data_for_fit_sorted.csv
+Output plot file: CNOT7X_FRET_kinetics_fits_sorted-data.pdf
+Optimal fit parameter file: CNOT7X_optimal_fit_params_sorted-data.csv
 Experimental parameters:
   Enzyme: # Enzyme concentration
     Value: [0, 0.0000005, 0.000001, 0.000002, 0.000003, 0.000005, 0.000007, 0.00001]
