new .YAML files for best datasets

--- a/src/data/230921_CNOT7_CNO7X_CAPRIN1/CNOT7X_CAPRIN1/fit_parameters_CNOT7X_CAPRIN1.yaml
+++ b/src/data/230921_CNOT7_CNO7X_CAPRIN1/CNOT7X_CAPRIN1/fit_parameters_CNOT7X_CAPRIN1.yaml
@@ -67,5 +67,8 @@ Modeling parameters:
 Plot parameters:
   Plot best fit: True
   Plot residuals: True
-  Plot 2D population bars: True
+  Plot RNA population curves: True
+  Plot annealed fraction: True
+  Plot 2D population bars: False
   Plot 3D population bars: False
+
