--- a/src/data/230921_CNOT7_CNO7X_CAPRIN1/CNOT7X_CAPRIN1/fit_parameters_CNOT7X_CAPRIN1.yaml
+++ b/src/data/230921_CNOT7_CNO7X_CAPRIN1/CNOT7X_CAPRIN1/fit_parameters_CNOT7X_CAPRIN1.yaml
@@ -1,7 +1,7 @@
 Sample name: CNOT7X-CAPRIN1
-Data file to fit: CNOT7X_CAPRIN1_data_for_fit.csv
-Output plot file: CNOT7X_CAPRIN1_FRET_kinetics_fits.pdf
-Optimal fit parameter file: CNOT7X_CAPRIN1_optimal_fit_params.csv
+Data file to fit: CNOT7X_CAPRIN1_data_for_fit_sorted.csv
+Output plot file: CNOT7X_CAPRIN1_FRET_kinetics_fits_sorted.pdf
+Optimal fit parameter file: CNOT7X_CAPRIN1_optimal_fit_params_sorted.csv
 Experimental parameters:
   Enzyme: # Enzyme concentration
     Value: [0, 0.000002, 0.000003, 0.000005, 0.000007, 0.00001]
@@ -17,7 +17,7 @@ Modeling parameters:
   Fit: True
   Use individual replicates: True
   Minimizer: 
-    Initial: 'leastsq'
+    Initial: 'nelder'
     Subsequent : 'leastsq'
   Kinetic model: Distributive
   Fit parameters:
@@ -32,17 +32,17 @@ Modeling parameters:
       Vary: False
       Minimum: 0
     k2:
-      Value: 10587927.17929597
+      Value: 1118827.5
       Units: M^-1s^-1
       Vary: True
       Minimum: 0
     km2:
-      Value: 59.30181117609112
+      Value: 23.8525862
       Units: s^-1
       Vary: True
       Minimum: 0
     kcat:
-      Value: 0.043428357877090595
+      Value: 0.3394090
       Units: s^-1
       Vary: True
       Minimum: 0
@@ -71,4 +71,3 @@ Plot parameters:
   Plot annealed fraction: True
   Plot 2D population bars: False
   Plot 3D population bars: False
-
