--- a/src/data/CNOT8_CNOT8X_CAPRIN1/CNOT8X/fit_parameters_CNOT8X.yaml
+++ b/src/data/CNOT8_CNOT8X_CAPRIN1/CNOT8X/fit_parameters_CNOT8X.yaml
@@ -1,48 +1,48 @@
-Sample name: CNOT7X
-Data file to fit: CNOT7X_0-1-2-3-4-10uM_data_for_fit.csv
-Output plot file: CNOT7X_FRET_kinetics_fits.pdf
-Optimal fit parameter file: CNOT7X_optimal_fit_params.csv
+Sample name: CNOT8X
+Data file to fit: CNOT8X_RNA-100nM-250nM-data_for_fit_sorted.csv
+Output plot file: CNOT8X_100-250nMRNA_FRET_kinetics_fits_sorted.pdf
+Optimal fit parameter file: CNOT8X_100-250nMRNA_optimal_fit_params_sorted.csv
 Experimental parameters:
   Enzyme: # Enzyme concentration
-    Value: [0, 0.000001, 0.000002, 0.000003, 0.000005, 0.000007, 0.00001, 0.00003]
+    Value: [0, 0.0000001, 0.0000002, 0.0000003, 0.0000005, 0.000001, 0.000002, 0.000003, 0.000005, 0.000007]
   RNA: # polyA RNA substrate concentration
-    Value: [0.0000001]
+    Value: [0.0000001, 0.00000025]
   QT: # DNA quencher strand concentration
-    Value: 0.000002
+    Value: 0.0000005
   n: # polyA RNA length
     Value: 18
   Temperature: 
     Value: 303.15
 Modeling parameters:
-  Fit: False
-  Use individual replicates: False
+  Fit: True
+  Use individual replicates: True
   Minimizer: 
-    Initial: 'leastsq'
+    Initial: 'nelder'
     Subsequent : 'leastsq'
   Kinetic model: Distributive
   Fit parameters:
     k1:
-      Value: 10000000
+      Value: 27739.368966300745
       Units: s^-1
-      Vary: False
+      Vary: True
       Minimum: 0
     km1:
-      Value: 0.00000001
+      Value: 5.176187339416231
       Units: s^-1
-      Vary: False
+      Vary: True
       Minimum: 0
     k2:
-      Value: 8884.81
+      Value: 6673520.470365472
       Units: M^-1s^-1
       Vary: True
       Minimum: 0
     km2:
-      Value: 0.040976
+      Value: 32.52056679333865
       Units: s^-1
       Vary: True
       Minimum: 0
     kcat:
-      Value: 0.385032
+      Value: 0.28367846668362007
       Units: s^-1
       Vary: True
       Minimum: 0
@@ -67,5 +67,7 @@ Modeling parameters:
 Plot parameters:
   Plot best fit: True
   Plot residuals: True
+  Plot RNA population curves: True
+  Plot annealed fraction: True
   Plot 2D population bars: False
-  Plot 3D population bars: True
+  Plot 3D population bars: False
