--- a/src/data/CNOT8_CNOT8X_CAPRIN1/CNOT8X_CAPRIN1/fit_parameters_CNOT8X-wCAP1.yaml
+++ b/src/data/CNOT8_CNOT8X_CAPRIN1/CNOT8X_CAPRIN1/fit_parameters_CNOT8X-wCAP1.yaml
@@ -1,7 +1,7 @@
-Sample name: CNOT8X
-Data file to fit: CNOT8X_RNA-100nM-data_for_fit_sorted.csv
-Output plot file: CNOT8X_100nMRNA_FRET_kinetics_fits_sorted.pdf
-Optimal fit parameter file: CNOT8X_100nMRNA_optimal_fit_params_sorted.csv
+Sample name: CNOT8X + CAPRIN1
+Data file to fit: CNOT8X-CAPRIN1_data_for_fit_sorted.csv
+Output plot file: CNOT8X-CAPRIN1_FRET_kinetics_fits_sorted.pdf
+Optimal fit parameter file: CNOT8X-CAPRIN1_optimal_fit_params_sorted.csv
 Experimental parameters:
   Enzyme: # Enzyme concentration
     Value: [0, 0.0000001, 0.0000002, 0.0000003, 0.0000005, 0.000001, 0.000002, 0.000003, 0.000005, 0.000007]
