--- a/src/data/CNOT7X/fit_parameters_CNOT7X.yaml
+++ b/src/data/CNOT7X/fit_parameters_CNOT7X.yaml
@@ -1,50 +1,47 @@
 Sample name: CNOT7X
-Data file to fit: CNOT7X_0-1-2-3-4-10uM_data_for_fit.csv
-Output plot file: CNOT7X_FRET_kinetics_fits.pdf
-Optimal fit parameter file: CNOT7X_optimal_fit_params.csv
+Data file to fit: CNOT7X_100nMRNA_FRET_data_to_fit.csv
+Output plot file: CNOT7X_100nMRNA_FRET_kinetics_fits.pdf
+Optimal fit parameter file: CNOT7X_100nMRNA_optimal_fit_params.csv
 Experimental parameters:
   Enzyme: # Enzyme concentration
-    Value: [0, 0.000001, 0.000002, 0.000003, 0.000005, 0.000007, 0.00001, 0.00003]
+    Value: [0, 0.0000005, 0.000001, 0.000002, 0.000003, 0.000005, 0.000007, 0.00001]
   RNA: # polyA RNA substrate concentration
     Value: [0.0000001]
   QT: # DNA quencher strand concentration
-    Value: 0.000002
+    Value: 0.0000005
   n: # polyA RNA length
     Value: 18
   Temperature: 
     Value: 303.15
 Modeling parameters:
-  Fit: False
-  Use individual replicates: False
-  Minimizer: 
-    Initial: 'leastsq'
-    Subsequent : 'leastsq'
+  Fit: True
+  Minimizer: 'leastsq'
   Kinetic model: Distributive
   Fit parameters:
     k1:
-      Value: 10000000
+      Value: 1.0e+10
       Units: s^-1
       Vary: False
       Minimum: 0
     km1:
-      Value: 0.00000001
+      Value: 1.0e-08
       Units: s^-1
       Vary: False
       Minimum: 0
     k2:
-      Value: 8884.81
+      Value: 14036 # Optimal 14036.0
       Units: M^-1s^-1
       Vary: True
       Minimum: 0
     km2:
-      Value: 0.040976
+      Value: 3.87 # Optimal 3.87
       Units: s^-1
       Vary: True
       Minimum: 0
     kcat:
-      Value: 0.385032
+      Value: 1.27
       Units: s^-1
-      Vary: True
+      Vary: False
       Minimum: 0
     dGo:
       Value: -2.9272 # kJ/mol Empirical value calculated from Sugimoto NAR paper
@@ -58,14 +55,17 @@ Modeling parameters:
       Minimum: -20
   Error estimation:
     Monte Carlo:
-      Run: False
-      Iterations: 250
+      Run: True
+      Iterations: 5
     Error surfaces:
-      Run: False
-      Parameter range factor: 50
-      Points: 50
+      Run: True
+      Parameter range factor: 2
+      Points: 5
 Plot parameters:
+  Plot mean data: True
   Plot best fit: True
   Plot residuals: True
+  Plot RNA population curves: True
+  Plot annealed fraction: False
   Plot 2D population bars: False
-  Plot 3D population bars: True
+  Plot 3D population bars: False
